# ChangeLog for dev-perl/crypt-random
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/crypt-random/ChangeLog,v 1.6 2005/04/11 16:26:23 mcummings Exp $

*crypt-random-1.25 (11 Apr 2005)

  11 Apr 2005; Michael Cummings <mcummings@gentoo.org>
  crypt-random-1.13.ebuild, crypt-random-1.23.ebuild,
  +crypt-random-1.25.ebuild:
  new version, new deps, new joys, needed for module signing

*crypt-random-1.23 (05 Jun 2004)

  05 Jun 2004; Michael Cummings <mcummings@gentoo.org>
  crypt-random-1.23.ebuild:
  new stable version on cpan

  25 Feb 2004; Joshua Kinard <kumba@gentoo.org> crypt-random-1.13.ebuild:
  Added ~mips to KEYWORDS to satisfy repoman deps.

  27 Oct 2003; Brad House <brad_mssw@gentoo.org> crypt-random-1.13.ebuild:
  add ~amd64 flag

*crypt-random-1.13 (23 Jun 2003)

  23 Jun 2003; Michael Cummings <mcummings@gentoo.org>
  crypt-random-1.13.ebuild:
  dep for crypt-dh
