@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/crypt-random
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/crypt-random/ChangeLog,v 1.6 2005/04/11 16:26:23 mcummings Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/crypt-random/ChangeLog,v 1.7 2005/04/11 20:35:12 fmccor Exp $
+
+  11 Apr 2005; Ferris McCormick <fmccor@gentoo.org>
+  crypt-random-1.25.ebuild:
+  Remove ~sparc keyword: See Bug 87790 for an explanation of the problems
+  with pari-2.1.6 necessitating this.
 
 *crypt-random-1.25 (11 Apr 2005)
 
